--- a/src/styling/Projects.css
+++ b/src/styling/Projects.css
@@ -1,6 +1,12 @@
 .projects {
   background-color: #f9f9f9;
   z-index: 2;
+  position: relative;
+  min-height: 60vh;
+}
+
+.projects > h1 {
+  margin-top: 0;
 }
 
 .projects h1 {
